force-app/main/default/objects/Demo_Opportunity__x/Demo_Opportunity__x.object-meta.xml
<CustomObject>
    <externalDataSource>SGPT_Demo2</externalDataSource>
    <externalName>Opportunity</externalName>
    <label>Demo Opportunity</label>
    <pluralLabel>Demo Opportunities</pluralLabel>
</CustomObject>