force-app/main/default/objects/Demo_Opportunity__x/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <externalDeveloperName>AccountId</externalDeveloperName>
    <label>Account ID</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>Demo Opportunities</relationshipLabel>
    <relationshipName>Demo_Opportunities</relationshipName>
    <type>ExternalLookup</type>
</CustomField>