force-app/main/default/objects/Demo_Opportunity__x/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <externalDeveloperName>CampaignId</externalDeveloperName>
    <label>Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>