force-app/main/default/objects/Demo_Opportunity__x/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <externalDeveloperName>CloseDate</externalDeveloperName>
    <label>Close Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>