force-app/main/default/objects/Demo_Opportunity__x/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <externalDeveloperName>ContactId</externalDeveloperName>
    <label>Contact ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>