force-app/main/default/objects/Demo_Opportunity__x/fields/Customer_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_c__c</fullName>
    <externalDeveloperName>Customer_Contact__c</externalDeveloperName>
    <label>Customer Contact</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>