force-app/main/default/objects/Demo_Opportunity__x/fields/Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Fiscal__c</fullName>
    <externalDeveloperName>Fiscal</externalDeveloperName>
    <label>Fiscal Period</label>
    <length>6</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>