force-app/main/default/objects/Demo_Opportunity__x/fields/FiscalQuarter__c.field-meta.xml
<CustomField>
    <fullName>FiscalQuarter__c</fullName>
    <externalDeveloperName>FiscalQuarter</externalDeveloperName>
    <label>Fiscal Quarter</label>
    <precision>8</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>