force-app/main/default/objects/Demo_Opportunity__x/fields/FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>FiscalYear__c</fullName>
    <externalDeveloperName>FiscalYear</externalDeveloperName>
    <label>Fiscal Year</label>
    <precision>8</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>