force-app/main/default/objects/Demo_Opportunity__x/fields/ForecastCategory__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategory__c</fullName>
    <externalDeveloperName>ForecastCategory</externalDeveloperName>
    <label>Forecast Category</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Omitted</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>BestCase</fullName>
                <label>Best Case</label>
            </value>
            <value>
                <fullName>MostLikely</fullName>
                <label>Most Likely</label>
            </value>
            <value>
                <fullName>Forecast</fullName>
                <label>Commit</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>