force-app/main/default/objects/Demo_Opportunity__x/fields/ForecastCategoryName__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategoryName__c</fullName>
    <externalDeveloperName>ForecastCategoryName</externalDeveloperName>
    <label>Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Omitted</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>