force-app/main/default/objects/Demo_Opportunity__x/fields/Industry_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type_c__c</fullName>
    <externalDeveloperName>Industry_Type__c</externalDeveloperName>
    <label>Industry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Health insurance</fullName>
            </value>
            <value>
                <fullName>Hi_Tech</fullName>
                <label>Hi-Tech</label>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>