force-app/main/default/objects/Demo_Opportunity__x/fields/Internal_Account__c.field-meta.xml
<CustomField>
    <fullName>Internal_Account__c</fullName>
    <externalDeveloperName>Internal_Account__c</externalDeveloperName>
    <label>Internal Account</label>
    <length>255</length>
    <referenceTargetField>Account.Target_Parent_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demo Opportunities</relationshipLabel>
    <relationshipName>Demo_Opportunities</relationshipName>
    <type>IndirectLookup</type>
</CustomField>