force-app/main/default/objects/Demo_Opportunity__x/fields/IsWon__c.field-meta.xml
<CustomField>
    <fullName>IsWon__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsWon</externalDeveloperName>
    <label>Won</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>