force-app/main/default/objects/Demo_Opportunity__x/fields/LastCloseDateChangedHistoryId__c.field-meta.xml
<CustomField>
    <fullName>LastCloseDateChangedHistoryId__c</fullName>
    <externalDeveloperName>LastCloseDateChangedHistoryId</externalDeveloperName>
    <label>Opportunity History ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>