force-app/main/default/objects/Demo_Opportunity__x/fields/LastStageChangeDate__c.field-meta.xml
<CustomField>
    <fullName>LastStageChangeDate__c</fullName>
    <externalDeveloperName>LastStageChangeDate</externalDeveloperName>
    <label>Last Stage Change Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>