force-app/main/default/objects/Demo_Opportunity__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>