force-app/main/default/objects/Demo_Opportunity__x/fields/Pricebook2Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2Id__c</fullName>
    <externalDeveloperName>Pricebook2Id</externalDeveloperName>
    <label>Price Book ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>