force-app/main/default/objects/Demo_Opportunity__x/fields/Primary_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_c__c</fullName>
    <externalDeveloperName>Primary_Contact__c</externalDeveloperName>
    <label>Primary Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>