force-app/main/default/objects/Demo_Opportunity__x/fields/PushCount__c.field-meta.xml
<CustomField>
    <fullName>PushCount__c</fullName>
    <externalDeveloperName>PushCount</externalDeveloperName>
    <label>Push Count</label>
    <precision>9</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>