force-app/main/default/objects/Demo_Opportunity__x/fields/Sales_Rep_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_c__c</fullName>
    <externalDeveloperName>Sales_Rep__c</externalDeveloperName>
    <label>Sales Rep</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>