force-app/main/default/objects/Demo_Opportunity__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <externalDeveloperName>Type</externalDeveloperName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Business</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>